@@ -34,6 +34,14 @@ from .utils import merge_universes
 
 __all__ = ['covariance', 'similarity', 'confdistmatrix', 'clustering']
 
+import warnings
+
+wmsg = ("Deprecation in version 2.8.0\n"
+        "MDAnalysis.analysis.encore is deprecated in favour of the "
+        "MDAKit mdaencore (https://www.mdanalysis.org/mdaencore/) "
+        "and will be removed in MDAnalysis version 3.0.0.")
+warnings.warn(wmsg, category=DeprecationWarning)
+
 from ...due import due, Doi
 
 due.cite(Doi("10.1371/journal.pcbi.1004415"),
