@@ -30,6 +30,12 @@ an ensemble of structures.
 :Author: Matteo Tiberti, Wouter Boomsma, Tone Bengtsen
 
 .. versionadded:: 0.16.0
+
+.. deprecated:: 2.8.0
+   This module is deprecated in favour of the 
+   MDAKit `mdaencore <https://mdanalysis.org/mdaencore/>`_ and will be removed
+   in MDAnalysis 3.0.0.
+
 """
 import numpy as np
 
